Timesheet/main/default/objects/Project__c/Project__c.object-meta.xml
<CustomObject>
    <label>Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>