Timesheet/main/default/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Billable__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>